[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_suite"
version = "0.1.0"
description = "Tools for machine learning research and development."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hydra-core>=1.3.2",
    "jupyter-core>=5.9.1",
    "lightning>=2.6.5",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "omegaconf>=2.3.0",
    "torch>=2.12.0",
    "torchdiffeq>=0.2.5",
    "wandb>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.15",
    "pytest>=8.0.0",
    "ipykernel>=6.29.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ml_suite*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]